@@ -299,8 +299,9 @@ PKG_CHECK_MODULES(HAL, [dbus-1 >= 0.31 hal >= 0.5.0],
 if test "x$have_hal" = "xtrue"; then
    AC_SUBST(HAL_CFLAGS)
    AC_SUBST(HAL_LIBS)
-   IOLIB_SUBDIRS="$IOLIB_SUBDIRS disk"
+   AC_DEFINE(HAVE_HAL,1,[defined if HAL is available])
 fi
+IOLIB_SUBDIRS="$IOLIB_SUBDIRS disk"
 
 # ----------------------------------------------------------------------
 # Define IOLIB stuff
